# acheron

./: .codecov.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  todo.md
.github/: main.workflow
.github/workflows/: rust.yml
examples/robbie/unsatisfiable/: contradiction.cnf  contradiction2.cnf
src/: autoincrementer.rs  clause.rs  formula.rs  frame.rs  history.rs  lib.rs  literal.rs  opcode.rs  parser.rs  pure.rs  sign.rs  solver.rs  summary.rs  variable.rs
src/core/: assignment.rs  clause.rs  condition.rs  formula.rs  literal.rs  mod.rs  sign.rs  status.rs
src/core/clause/: clause_assignment.rs  mod.rs
src/core/condition/: assignment.rs  effect.rs  mod.rs
src/engine/: decision_engine.rs  mod.rs
src/ops/: constructor_context.rs  maker.rs  mod.rs  op_context.rs  opcode.rs  operation.rs  operator.rs
src/ops/cond_app/: mod.rs
src/ops/pure_lit/: mod.rs
src/ops/sat/: mod.rs
src/ops/unit_prop/: mod.rs
src/ops/unsat/: mod.rs
src/work_queue/: history.rs  job.rs  job_output.rs  mod.rs  operation.rs  summary.rs  termination.rs
tests/: acceptance.rs
tests/acceptance/: main.rs  old.rs  parser.rs
