[package]
name = "acheron"
version = "0.1.0"
authors = ["Robbie McKinstry <robbie@whiterabbit.llc>"]
edition = "2021"
license = "MIT"
description = "A simple DPLL SAT solver"

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = "3.2.16"
im = "15.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
static_assertions = "1.1.0"
